magically got this shit to load

--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
     <head>
         <title>Dota 2 Clicker</title>
         <link rel="stylesheet" type="text/css" href="main.css" />
-        <script type="text/javascript" src="helpers.js"></script>
         <script type="text/javascript" src="main.js"></script>
     </head>
     <body>
@@ -12,13 +11,13 @@
                 <div id="version" class="title"></div>
                 <div id="left" class="inset">
                     <div id="gold"></div>
+                    <div id="gps"></div>
                     <div id="creepAnchor">
                         <div id="bigCreep"></div>
                     </div>
                 </div>
             </div>
         </div>
-        <h1>Dota 2 Clicker</h1>
     </body>
     <footer>
         <p>&copy; Dragovorn Development LLC 2018 | Dota 2 and all it's assets are &copy; Valve Corporation, please don't sue us.</p>
