hackermaned some more of the UI together, technically it works as a clicker

--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
         <div id="wrapper">
             <div id="game">
                 <div id="version" class="title"></div>
+                <div id="disclaimer">
+                    &copy; Dragovorn Development LLC 2018 | Dota 2 and all it's assets are &copy; Valve Corporation, please don't sue us.
+                    <br />
+                    This project is <a href="https://github.com/Dragovorn/dota-clicker" target="_blank">open source</a>
+                </div>
                 <div id="left" class="inset">
                     <div id="gold"></div>
                     <div id="gps"></div>
@@ -16,10 +21,12 @@
                         <div id="bigCreep"></div>
                     </div>
                 </div>
+                <div id="right" class="inset">
+                    <div id="store">
+                        
+                    </div>
+                </div>
             </div>
         </div>
     </body>
-    <footer>
-        <p>&copy; Dragovorn Development LLC 2018 | Dota 2 and all it's assets are &copy; Valve Corporation, please don't sue us.</p>
-    </footer>
 </html>
