Add sound functionality - Added last_hit.mp3 - Added sound playing to javascript code

--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
                     <div id="gold"></div>
                     <div id="gps"></div>
                     <div id="creepAnchor">
-                        <div id="bigCreep"></div>
+                        <div id="bigCreep"></div> <!-- Make this into an SVG and map it around our transparent creep image -->
                     </div>
                 </div>
                 <div id="right" class="inset">
-                    <div id="store">
+                    <div id="store"> <!-- I've got a couple ideas for what to do for this, I'll make a document -->
                         
                     </div>
                 </div>
